# Deimos-Wizard101

./: .gitignore  Deimos-config.ini  Deimos.py  Deimos.spec  README.md  README.txt  _pyi_rthook_wizsprinter.py  pyproject.toml  requirements.txt  save.txt
.github/workflows/: build.yml  ci.yml  develop.yml  release.yml
frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  globals.css  types.ts
frontend/src/components/: BotTab.tsx  CameraTab.tsx  ClientInfo.tsx  CombatTab.tsx  ConsoleTab.tsx  DevUtilsTab.tsx  EntityListDialog.tsx  FlythroughTab.tsx  HotkeysTab.tsx  MiscTab.tsx  StatViewerTab.tsx
frontend/src/components/ui/: badge.tsx  dialog.tsx  select.tsx
frontend/src/hooks/: useDeimosSocket.ts
libs/wizlaunch/src/: launcher.rs
libs/wizsprinter/: .gitignore  pyproject.toml
libs/wizsprinter/examples/configless/single_character/: minimal.py
libs/wizsprinter/examples/configured/single_character/: minimal.py
libs/wizsprinter/wizwalker/extensions/wizsprinter/: combat_lifting.py  sprinty_combat.py  wiz_navigator.py
libs/wizsprinter/wizwalker/extensions/wizsprinter/combat_backends/: backend_base.py  combat_api.py  combat_config_parser.py  config_backend.py  (+1 more)
libs/wizwalker/: .gitignore  pyproject.toml
libs/wizwalker/.github/workflows/: upload_docs.yml
libs/wizwalker/examples/: README.md  fight_lost_soul.py  quest_teleporter.py  read_fish_basket_space.py  speed_walker.py
libs/wizwalker/pdoc_template/: theme.css
libs/wizwalker/wizwalker/: client.py  client_handler.py  utils.py
libs/wizwalker/wizwalker/combat/: card.py  handler.py
libs/wizwalker/wizwalker/extensions/scripting/: deck_builder.py  utils.py
libs/wizwalker/wizwalker/file_readers/: cache_handler.py
libs/wizwalker/wizwalker/memory/: handler.py  hooks.py
libs/wizwalker/wizwalker/memory/memory_objects/: behavior_template.py  combat_action.py  enums.py  game_client.py  game_stats.py  spell.py  spell_effect.py  spell_template.py  window.py
locale/: en.lang  es.lang  zh.lang
src/: account_vault.py  auto_combat.py  auto_pet.py  camera_utils.py  collision.py  collision_math.py  combat_cache.py  combat_math.py  combat_new.py  combat_objects.py  combat_utils.py  command_parser.py  config_combat.py  dance_game_hook.py  deck_encoder.py  deimosgui.py  discsdk.py  drop_logger.py  effect_simulation.py  gui_inputs.py  lang.py  minimap.py  paths.py  pyqt_gui.py  questing.py  settings_manager.py  sigil.py  sprinty_client.py  stat_viewer.py  teleport_math.py  tokenizer.py  utils.py  world_to_screen.py
src/deimoslang/: ir.py  parser.py  sem.py  tokenizer.py  types.py  vm.py
src/gui/: actions.py  commands.py  helpers.py  main.py  popups.py  settings_dialog.py  tab_actions.py  tab_camera.py  tab_dev_utils.py  tab_hotkeys.py  tab_launcher.py  tab_stats.py  theme.py  widgets.py
wizwalker/extensions/wizsprinter/: sprinty_combat.py
(+3 files in other folders)
